# ctrulib

./: .gitignore  CMakeLists.txt  README.rst  libctru-config.cmake.in
CMake/: libctru-config.cmake.in
cmake/Modules/: CMakeProjectSettings.cmake  OpenCTR-Toolchain.cmake
source/: sdmc_dev.c
source/system/: initSystem.c
